fixed grid spacing with box-sizing: border-box;

--- a/style.css
+++ b/style.css
@@ -10,18 +10,27 @@ Text Domain: kinkajou
 */
 
 
+/* Desktop default layout */
+
 #main {
   display: block;
   height: 100vh;
+  width: 100vw;
   overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+body {
+  margin: 0;
 }
 
 .sidenav.external {
   display: block;
   float: left;
-  height:100%;
+  height: 100%; 
   width: 15%;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .sidenav.internal {
@@ -32,7 +41,15 @@ Text Domain: kinkajou
 }
 
 .sidenav.link.entry {
-         display: block;
+  display: block;
+}
+
+.post.grid {
+  box-sizing: border-box;
+}
+
+.post.grid.padding {
+  padding: 10px;
 }
 
 .post.grid.main {
@@ -42,30 +59,38 @@ Text Domain: kinkajou
   height: 100%;
 }
 
-.post.grid.item.container {
+.post.grid.item {
   display: block;
-  height: 30%;
-  padding: 1%;
 }
 
-.post.grid.item.permalink {
-  display: block;
+.post.grid.container {
+  height: calc(100% / 3);
+}
+
+.post.grid.permalink {
   height: 100%;
-  width: 100%;
 }
 
-.post.grid.item.thumbnail {
-  display: block;
-  margin: auto;
+.post.grid.thumbnail {
   max-width: 100%;
   max-height: 100%;
 }
 
+/* Mobile layout */
+
 @media only screen and (max-width: 980px) {
+  .sidenav.external {
+    width: 0px;
+    height: 0px;
+  }
+
   .post.grid.main {
+    width: auto;
+    height: auto;
     display: flex;
     flex-flow: row wrap;
-    float: left;
-    width: 100%;
   }
+
+  .post.grid.container {
+    width: calc(100% / 2);
 }
